--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Projeto do João Fonseca</title>
+	<title>Projeto do João Fonseca!</title>
 </head>
 <body>
+	<h1>Sobre mim</h1>
 
+	<p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>, <em>durabilidade</em> e que <em>agregam valor</em> para meus clientes.</p>
 </body>
 </html>
