--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="estilo.css"
 	<title>Projeto do João Fonseca!</title>
 </head>
 <body>
